--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Turístico</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="page">
@@ -22,7 +23,7 @@
         <p>Para os amantes de história</p>
         <h2>Descubra 3 destinos imperdíveis em Busan</h2>
         <p>
-          As atrações de Busan vão desde templos budistas centenários que
+          As atrações de Busan vão desde templos budistas centenários que
           pontilham as montanhas e o litoral da cidade até praias imaculadas com
           águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer
           o ano todo - as famílias podem passar o tempo em um aquário à
@@ -33,24 +34,22 @@
           os fotógrafos.
         </p>
 
-        <ol>
+        <ol class="lista-com-imagens">
           <img src="assets/Templo Haedong Yonggungsa.jpg" alt="" />
-          <li>
-            Templo Haedong Yonggungsa
-            <p>
-              O Templo Haedong Yonggungsa é um templo budista localizado no
-              extremo nordeste de Busan. Construído em 1376, é um dos poucos
-              templos na Coreia construídos à beira-mar – você pode desfrutar de
-              vistas do Mar do Leste de um lado e de belas montanhas do outro. 
-            </p>
-            <p>Bom para:</p>
-            <ul>
-              <li>história</li>
-            </ul>
-          </li>
+          <h3><li>Templo Haedong Yonggungsa</li></h3>
+          <p>
+            O Templo Haedong Yonggungsa é um templo budista localizado no
+            extremo nordeste de Busan. Construído em 1376, é um dos poucos
+            templos na Coreia construídos à beira-mar – você pode desfrutar de
+            vistas do Mar do Leste de um lado e de belas montanhas do outro. 
+          </p>
+          <p>Bom para:</p>
+          <ul>
+            <li>história</li>
+          </ul>
+
           <img src="assets/Beomeo-sa.jpg" alt="" />
-          <li>
-            Templo Beomeo-sa
+            <h3><li>Templo Beomeo-sa</h3></li>
             <p>
               O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul.
               Ele está localizado no alto da borda leste da montanha Geumjeongsa
@@ -61,10 +60,8 @@
             <ul>
               <li>história</li>
             </ul>
-          </li>
           <img src="assets/Yongdusan.jpg" alt="" />
-          <li>
-            Parque Yongdusan
+            <h3><li>Parque Yongdusan</h3></li>
             <p>
               O Parque Yongdusan, localizado no centro de Busan, abriga alguns
               dos monumentos mais importantes da cidade. Você pode ver vistas
@@ -79,7 +76,6 @@
               <li>Famílias</li>
               <li>Orçamento</li>
             </ul>
-          </li>
         </ol>
       </section>
       <section id="description">
