--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Turístico</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="page">
       <section id="introduction">
-        <p>SUA PRÓXIMA VIAGEM</p>
+        <p class="headline">SUA PRÓXIMA VIAGEM</p>
         <h1>Conheça Busan</h1>
         <img src="assets/busan.jpg" alt="" />
-        <p>
+        <p class="subtitle">
           Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde
           churrascarias de primeira linha até tradicionais barracas de comida de
           rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos
@@ -20,7 +23,7 @@
         </p>
       </section>
       <section id="content">
-        <p>Para os amantes de história</p>
+        <p class="headline">PARA OS AMANTES DE HISTÓRIA</p>
         <h2>Descubra 3 destinos imperdíveis em Busan</h2>
         <p>
           As atrações de Busan vão desde templos budistas centenários que
@@ -34,7 +37,7 @@
           os fotógrafos.
         </p>
 
-        <ol class="lista-com-imagens">
+        <ol>
           <img src="assets/Templo Haedong Yonggungsa.jpg" alt="" />
           <h3><li>Templo Haedong Yonggungsa</li></h3>
           <p>
