--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos
           as suas ofertas culinárias.
         </p>
+        <hr class="divisor">
       </section>
+
       <section id="content">
         <p class="headline">PARA OS AMANTES DE HISTÓRIA</p>
         <h2>Descubra 3 destinos imperdíveis em Busan</h2>
@@ -44,11 +46,11 @@
             O Templo Haedong Yonggungsa é um templo budista localizado no
             extremo nordeste de Busan. Construído em 1376, é um dos poucos
             templos na Coreia construídos à beira-mar – você pode desfrutar de
-            vistas do Mar do Leste de um lado e de belas montanhas do outro. 
+            vistas do Mar do Leste de um lado e de belas montanhas do outro.<br> 
           </p>
-          <p>Bom para:</p>
+          <p class="content-card">Bom para:</p>
           <ul>
-            <li>história</li>
+            <li class="blue">História</li>
           </ul>
 
           <img src="assets/Beomeo-sa.jpg" alt="" />
@@ -57,11 +59,11 @@
               O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul.
               Ele está localizado no alto da borda leste da montanha Geumjeongsa
               e fica distante da agitação da cidade. O Daeungjeon Hall do templo
-              é um exemplo bem preservado da arquitetura da Dinastia Joseon.
+              é um exemplo bem preservado da arquitetura da Dinastia Joseon.<br> 
             </p>
-            <p>Bom para:</p>
+            <p class="content-card">Bom para:</p>
             <ul>
-              <li>história</li>
+              <li class="blue">História</li>
             </ul>
           <img src="assets/Yongdusan.jpg" alt="" />
             <h3><li>Parque Yongdusan</h3></li>
@@ -71,15 +73,16 @@
               espetaculares do topo da Torre Busan, de 120 metros de altura. O
               parque tem 2 museus – confira os instrumentos musicais
               tradicionais no Museum of World Folk Instruments e mais de 80
-              veleiros coreanos no Exhibition Hall of World Model Boats.
+              veleiros coreanos no Exhibition Hall of World Model Boats.<br> 
             </p>
-            <p>Bom para:</p>
+            <p class="content-card">Bom para:</p>
             <ul>
-              <li>Casais</li>
-              <li>Famílias</li>
-              <li>Orçamento</li>
+              <li class="purple">Casais</li>
+              <li class="pink">Famílias</li>
+              <li class="orange">Orçamento</li>
             </ul>
         </ol>
+        <hr class="divisor">
       </section>
       <section id="description">
         <p>
